# dslop

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
evals/: conftest.py  optimize_guidance.py  optimized_guidance.json  pyproject.toml  test_rewrites.py
src/: check.rs  config.rs  main.rs  metrics.rs  output.rs  patterns.rs
