[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dslop"
version = "0.2.1"
description = "Detect AI writing patterns (slop) in your codebase"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Adam Azzam", email = "adam@prefect.io" },
]
keywords = ["linter", "writing", "llm", "slop", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/prefectlabs/dslop"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
