[project]
name = "sf-evals"
version = "0.1.0"
description = "Evals for sf error code effectiveness across LLMs"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]

[dependency-groups]
dev = [
    "gepa>=0.1.1",
    "litellm>=1.82.6",
]

[tool.uv]
# litellm 1.82.7 and 1.82.8 were compromised on PyPI (2026-03-24)
constraint-dependencies = ["litellm!=1.82.7,!=1.82.8"]

# Don't install packages released in the last 7 days.
# Quarantine window for supply chain attacks.
exclude-newer = "7 days"
